[package]
name = "error-code"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22.1"
error-code-derive = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.1", features = ["http2", "query", "tracing"] }
backtrace = "0.3.74"
http = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
